DRAKEN-2580: Map empty attachmets to null for webmessages